# Hacktoberfest-2021

./: LICENSE  README.md  Road lane detection.py  SCC_Kosaraju_algo.cpp
.github/workflows/: greetings.yml
Blog/: opensource.md
DSA/Graphs/SCC/: Kosaraju_algo.cpp  Kosaraju_algorithm.cpp
Live-Sketch-code/: Live_sketcher.ipynb
Python/: Location_Track.py  battery_reminder.py
Python/CryptoGraphy/: additive_inverse.py  extended_euclidean_algo.py  multiplicative_cipher.py
Python/Page Rank Algorithm/: Page rank.ipynb
Telescoop-docker-visualizer/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md
Telescoop-docker-visualizer/api/: Cargo.toml
Telescoop-docker-visualizer/api/src/: handler.rs  main.rs  route.rs
Telescoop-docker-visualizer/client/: .env.build  .env.development  .env.production  package-lock.json  package.json  vue.config.js
Telescoop-docker-visualizer/client/public/: index.html
Telescoop-docker-visualizer/client/src/: App.vue  main.ts
Telescoop-docker-visualizer/tools/: README.md  parchant
my-app/src/: index.css  index.js
my-app/src/components/: BoardComponent.js  GameComponent.js  SquareComponent.js
shopping-cart-counter/: package-lock.json  package.json
shopping-cart-counter/src/: App.js  index.js
shopping-cart-counter/src/components/: counter.jsx  counters.jsx  (+1 more)
stopwatch/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
tic-tac-toe/: package-lock.json  package.json
tic-tac-toe/src/: index.js
vidly/: README.md  package-lock.json  package.json
vidly/src/: App.js  index.css  index.js
(+29 files in other folders)
