[package]
name = "telescoop"
version = "0.2.3"
authors = ["David Vrtěl <dervishgaradex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
http = "0.2"
hyper = "0.14"
hyperlocal = "0.8"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
